--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ var _hmt = _hmt || [];
             </script>
     <meta name="description" content="">
     
-    <link rel="preload" href="/assets/css/0.styles.e4d8b86b.css" as="style"><link rel="preload" href="/assets/js/app.c5f87fe7.js" as="script"><link rel="preload" href="/assets/js/2.dbded86b.js" as="script"><link rel="preload" href="/assets/js/7.dab600c2.js" as="script"><link rel="prefetch" href="/assets/js/10.ba4608dd.js"><link rel="prefetch" href="/assets/js/11.8a3e33a7.js"><link rel="prefetch" href="/assets/js/3.2c99a915.js"><link rel="prefetch" href="/assets/js/4.d2790017.js"><link rel="prefetch" href="/assets/js/5.9c1736ec.js"><link rel="prefetch" href="/assets/js/6.83c9ea65.js"><link rel="prefetch" href="/assets/js/8.850c3d73.js"><link rel="prefetch" href="/assets/js/9.d5478af5.js">
+    <link rel="preload" href="/assets/css/0.styles.e4d8b86b.css" as="style"><link rel="preload" href="/assets/js/app.2a1d6216.js" as="script"><link rel="preload" href="/assets/js/2.dbded86b.js" as="script"><link rel="preload" href="/assets/js/7.dab600c2.js" as="script"><link rel="prefetch" href="/assets/js/10.ba4608dd.js"><link rel="prefetch" href="/assets/js/11.8a3e33a7.js"><link rel="prefetch" href="/assets/js/3.2c99a915.js"><link rel="prefetch" href="/assets/js/4.d2790017.js"><link rel="prefetch" href="/assets/js/5.9c1736ec.js"><link rel="prefetch" href="/assets/js/6.83c9ea65.js"><link rel="prefetch" href="/assets/js/8.850c3d73.js"><link rel="prefetch" href="/assets/js/9.d5478af5.js">
     <link rel="stylesheet" href="/assets/css/0.styles.e4d8b86b.css">
   </head>
   <body>
@@ -26,17 +26,17 @@ var _hmt = _hmt || [];
   实例
 </a></div><div class="nav-item"><a href="/resources/" class="nav-link">
   资源
-</a></div><div class="nav-item"><a href="/resources/" class="nav-link">
-  资源
-</a></div> <!----></nav></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="https://mp.weixin.qq.com/mp/appmsgalbum?__biz=MzI0OTQxNjQ4MA==&amp;action=getalbum&amp;album_id=1338601286555598848&amp;scene=173" target="_blank" rel="noopener noreferrer" class="nav-link external">
+</a></div><div class="nav-item"><a href="https://github.com/kenpusney/bhpl/issues" target="_blank" rel="noopener noreferrer" class="nav-link external">
+  反馈
+  <span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></div> <!----></nav></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="https://mp.weixin.qq.com/mp/appmsgalbum?__biz=MzI0OTQxNjQ4MA==&amp;action=getalbum&amp;album_id=1338601286555598848&amp;scene=173" target="_blank" rel="noopener noreferrer" class="nav-link external">
   连载
   <span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></div><div class="nav-item"><a href="/examples/" class="nav-link">
   实例
 </a></div><div class="nav-item"><a href="/resources/" class="nav-link">
   资源
-</a></div><div class="nav-item"><a href="/resources/" class="nav-link">
-  资源
-</a></div> <!----></nav>  <!----> </aside> <main aria-labelledby="main-title" class="home"><header class="hero"><!----> <h1 id="main-title">
+</a></div><div class="nav-item"><a href="https://github.com/kenpusney/bhpl/issues" target="_blank" rel="noopener noreferrer" class="nav-link external">
+  反馈
+  <span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></div> <!----></nav>  <!----> </aside> <main aria-labelledby="main-title" class="home"><header class="hero"><!----> <h1 id="main-title">
       编程语言简史
     </h1> <p class="description">
       A Brief History of Programming Languages
@@ -45,6 +45,6 @@ var _hmt = _hmt || [];
 </a></p></header> <div class="features"><div class="feature"><h2>活跃更新</h2> <p>“编程语言简史”系列正在公众号轻技术（lightych）活跃更新</p></div><div class="feature"><h2>示例驱动</h2> <p>在本站可以查阅到大量可运行示例，通过示例来体验编程语言的设计思路和实用技巧。</p></div><div class="feature"><h2>资料详实</h2> <p>本站引用了大量的互联网资料（包括网站、Wiki、书籍等），并提供相应的引用链接供以检索和下载。</p></div></div> <div class="theme-default-content custom content__default"></div> <div class="footer">
     MIT Licensed | Copyright © 2020-present Kimmy Leo
   </div></main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.c5f87fe7.js" defer></script><script src="/assets/js/2.dbded86b.js" defer></script><script src="/assets/js/7.dab600c2.js" defer></script>
+    <script src="/assets/js/app.2a1d6216.js" defer></script><script src="/assets/js/2.dbded86b.js" defer></script><script src="/assets/js/7.dab600c2.js" defer></script>
   </body>
 </html>
