--- a/404.html
+++ b/404.html
@@ -16,13 +16,13 @@ var _hmt = _hmt || [];
             </script>
     <meta name="description" content="">
     
-    <link rel="preload" href="/assets/css/0.styles.e4d8b86b.css" as="style"><link rel="preload" href="/assets/js/app.ba254aa5.js" as="script"><link rel="preload" href="/assets/js/6.83c9ea65.js" as="script"><link rel="prefetch" href="/assets/js/10.4681be28.js"><link rel="prefetch" href="/assets/js/11.49e040e3.js"><link rel="prefetch" href="/assets/js/12.93f0bccf.js"><link rel="prefetch" href="/assets/js/13.d9971f05.js"><link rel="prefetch" href="/assets/js/2.dbded86b.js"><link rel="prefetch" href="/assets/js/3.f34435cc.js"><link rel="prefetch" href="/assets/js/4.d2790017.js"><link rel="prefetch" href="/assets/js/5.9c1736ec.js"><link rel="prefetch" href="/assets/js/7.dab600c2.js"><link rel="prefetch" href="/assets/js/8.85fda5a1.js"><link rel="prefetch" href="/assets/js/9.866caecc.js">
+    <link rel="preload" href="/assets/css/0.styles.e4d8b86b.css" as="style"><link rel="preload" href="/assets/js/app.8293a4cf.js" as="script"><link rel="preload" href="/assets/js/6.83c9ea65.js" as="script"><link rel="prefetch" href="/assets/js/10.4681be28.js"><link rel="prefetch" href="/assets/js/11.49e040e3.js"><link rel="prefetch" href="/assets/js/12.93f0bccf.js"><link rel="prefetch" href="/assets/js/13.d9971f05.js"><link rel="prefetch" href="/assets/js/2.dbded86b.js"><link rel="prefetch" href="/assets/js/3.f34435cc.js"><link rel="prefetch" href="/assets/js/4.d2790017.js"><link rel="prefetch" href="/assets/js/5.9c1736ec.js"><link rel="prefetch" href="/assets/js/7.dab600c2.js"><link rel="prefetch" href="/assets/js/8.588adda0.js"><link rel="prefetch" href="/assets/js/9.866caecc.js">
     <link rel="stylesheet" href="/assets/css/0.styles.e4d8b86b.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.ba254aa5.js" defer></script><script src="/assets/js/6.83c9ea65.js" defer></script>
+    <script src="/assets/js/app.8293a4cf.js" defer></script><script src="/assets/js/6.83c9ea65.js" defer></script>
   </body>
 </html>
