deploy: f04b8a40364225fe78f1ab82345bb3a33953ab58

--- a/examples/S2/E05-CPL.html
+++ b/examples/S2/E05-CPL.html
@@ -16,8 +16,8 @@ var _hmt = _hmt || [];
             </script>
     <meta name="description" content="">
     
-    <link rel="preload" href="/assets/css/0.styles.82cbe302.css" as="style"><link rel="preload" href="/assets/js/app.f54b71a4.js" as="script"><link rel="preload" href="/assets/js/2.9102f5e9.js" as="script"><link rel="preload" href="/assets/js/11.9861b448.js" as="script"><link rel="prefetch" href="/assets/js/10.9e46e9ca.js"><link rel="prefetch" href="/assets/js/12.149fbc6e.js"><link rel="prefetch" href="/assets/js/13.5d95745c.js"><link rel="prefetch" href="/assets/js/3.a4eb7406.js"><link rel="prefetch" href="/assets/js/4.d4b719f5.js"><link rel="prefetch" href="/assets/js/5.b0472f33.js"><link rel="prefetch" href="/assets/js/6.da892920.js"><link rel="prefetch" href="/assets/js/7.597d7e8e.js"><link rel="prefetch" href="/assets/js/8.646399a7.js"><link rel="prefetch" href="/assets/js/9.4ecc896a.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.82cbe302.css">
+    <link rel="preload" href="/assets/css/0.styles.e4d8b86b.css" as="style"><link rel="preload" href="/assets/js/app.5ffa6777.js" as="script"><link rel="preload" href="/assets/js/2.dbded86b.js" as="script"><link rel="preload" href="/assets/js/10.ba9a9160.js" as="script"><link rel="prefetch" href="/assets/js/11.1e4b2640.js"><link rel="prefetch" href="/assets/js/12.829a2bd3.js"><link rel="prefetch" href="/assets/js/3.e90d7c08.js"><link rel="prefetch" href="/assets/js/4.d2790017.js"><link rel="prefetch" href="/assets/js/5.9c1736ec.js"><link rel="prefetch" href="/assets/js/6.83c9ea65.js"><link rel="prefetch" href="/assets/js/7.dab600c2.js"><link rel="prefetch" href="/assets/js/8.47531560.js"><link rel="prefetch" href="/assets/js/9.d5478af5.js">
+    <link rel="stylesheet" href="/assets/css/0.styles.e4d8b86b.css">
   </head>
   <body>
     <div id="app" data-server-rendered="true"><div class="theme-container"><header class="navbar"><div class="sidebar-button"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" viewBox="0 0 448 512" class="icon"><path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"></path></svg></div> <a href="/" class="home-link router-link-active"><!----> <span class="site-name">编程语言简史</span></a> <div class="links"><!----> <nav class="nav-links can-hide"><div class="nav-item"><a href="/getting-started.html" class="nav-link">
@@ -69,6 +69,6 @@ var _hmt = _hmt || [];
       <a href="/examples/S2/E04-SNOBOL.html" class="prev">
         SNOBOL
       </a></span> <!----></p></div> </main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.f54b71a4.js" defer></script><script src="/assets/js/2.9102f5e9.js" defer></script><script src="/assets/js/11.9861b448.js" defer></script>
+    <script src="/assets/js/app.5ffa6777.js" defer></script><script src="/assets/js/2.dbded86b.js" defer></script><script src="/assets/js/10.ba9a9160.js" defer></script>
   </body>
 </html>
