deploy: 5546f83020693cd36fc52618f0476ebfa1d5851b

--- a/examples/index.html
+++ b/examples/index.html
@@ -16,7 +16,7 @@ var _hmt = _hmt || [];
             </script>
     <meta name="description" content="">
     
-    <link rel="preload" href="/assets/css/0.styles.e4d8b86b.css" as="style"><link rel="preload" href="/assets/js/app.5ffa6777.js" as="script"><link rel="preload" href="/assets/js/2.dbded86b.js" as="script"><link rel="preload" href="/assets/js/8.47531560.js" as="script"><link rel="prefetch" href="/assets/js/10.ba9a9160.js"><link rel="prefetch" href="/assets/js/11.1e4b2640.js"><link rel="prefetch" href="/assets/js/12.829a2bd3.js"><link rel="prefetch" href="/assets/js/3.e90d7c08.js"><link rel="prefetch" href="/assets/js/4.d2790017.js"><link rel="prefetch" href="/assets/js/5.9c1736ec.js"><link rel="prefetch" href="/assets/js/6.83c9ea65.js"><link rel="prefetch" href="/assets/js/7.dab600c2.js"><link rel="prefetch" href="/assets/js/9.d5478af5.js">
+    <link rel="preload" href="/assets/css/0.styles.e4d8b86b.css" as="style"><link rel="preload" href="/assets/js/app.fc747106.js" as="script"><link rel="preload" href="/assets/js/2.dbded86b.js" as="script"><link rel="preload" href="/assets/js/8.47531560.js" as="script"><link rel="prefetch" href="/assets/js/10.ba9a9160.js"><link rel="prefetch" href="/assets/js/11.1e4b2640.js"><link rel="prefetch" href="/assets/js/12.829a2bd3.js"><link rel="prefetch" href="/assets/js/13.684c6164.js"><link rel="prefetch" href="/assets/js/14.4beae006.js"><link rel="prefetch" href="/assets/js/15.39f522c2.js"><link rel="prefetch" href="/assets/js/3.6529368c.js"><link rel="prefetch" href="/assets/js/4.d2790017.js"><link rel="prefetch" href="/assets/js/5.9c1736ec.js"><link rel="prefetch" href="/assets/js/6.83c9ea65.js"><link rel="prefetch" href="/assets/js/7.dab600c2.js"><link rel="prefetch" href="/assets/js/9.d5478af5.js">
     <link rel="stylesheet" href="/assets/css/0.styles.e4d8b86b.css">
   </head>
   <body>
@@ -45,6 +45,6 @@ var _hmt = _hmt || [];
       </a>
       →
     </span></p></div> </main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.5ffa6777.js" defer></script><script src="/assets/js/2.dbded86b.js" defer></script><script src="/assets/js/8.47531560.js" defer></script>
+    <script src="/assets/js/app.fc747106.js" defer></script><script src="/assets/js/2.dbded86b.js" defer></script><script src="/assets/js/8.47531560.js" defer></script>
   </body>
 </html>
