--- a/examples/S2/E04-SNOBOL.html
+++ b/examples/S2/E04-SNOBOL.html
@@ -16,7 +16,7 @@ var _hmt = _hmt || [];
             </script>
     <meta name="description" content="">
     
-    <link rel="preload" href="/assets/css/0.styles.e4d8b86b.css" as="style"><link rel="preload" href="/assets/js/app.fc747106.js" as="script"><link rel="preload" href="/assets/js/2.dbded86b.js" as="script"><link rel="preload" href="/assets/js/9.d5478af5.js" as="script"><link rel="prefetch" href="/assets/js/10.ba9a9160.js"><link rel="prefetch" href="/assets/js/11.1e4b2640.js"><link rel="prefetch" href="/assets/js/12.829a2bd3.js"><link rel="prefetch" href="/assets/js/13.684c6164.js"><link rel="prefetch" href="/assets/js/14.4beae006.js"><link rel="prefetch" href="/assets/js/15.39f522c2.js"><link rel="prefetch" href="/assets/js/3.6529368c.js"><link rel="prefetch" href="/assets/js/4.d2790017.js"><link rel="prefetch" href="/assets/js/5.9c1736ec.js"><link rel="prefetch" href="/assets/js/6.83c9ea65.js"><link rel="prefetch" href="/assets/js/7.dab600c2.js"><link rel="prefetch" href="/assets/js/8.47531560.js">
+    <link rel="preload" href="/assets/css/0.styles.e4d8b86b.css" as="style"><link rel="preload" href="/assets/js/app.8dda3b46.js" as="script"><link rel="preload" href="/assets/js/2.dbded86b.js" as="script"><link rel="preload" href="/assets/js/10.4681be28.js" as="script"><link rel="prefetch" href="/assets/js/11.49e040e3.js"><link rel="prefetch" href="/assets/js/12.93f0bccf.js"><link rel="prefetch" href="/assets/js/13.d9971f05.js"><link rel="prefetch" href="/assets/js/14.1ce06b2b.js"><link rel="prefetch" href="/assets/js/15.08eb5575.js"><link rel="prefetch" href="/assets/js/16.84dd4ea3.js"><link rel="prefetch" href="/assets/js/3.5e04ea21.js"><link rel="prefetch" href="/assets/js/4.d2790017.js"><link rel="prefetch" href="/assets/js/5.9c1736ec.js"><link rel="prefetch" href="/assets/js/6.83c9ea65.js"><link rel="prefetch" href="/assets/js/7.dab600c2.js"><link rel="prefetch" href="/assets/js/8.85fda5a1.js"><link rel="prefetch" href="/assets/js/9.866caecc.js">
     <link rel="stylesheet" href="/assets/css/0.styles.e4d8b86b.css">
   </head>
   <body>
@@ -150,6 +150,6 @@ END
       </a>
       →
     </span></p></div> </main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.fc747106.js" defer></script><script src="/assets/js/2.dbded86b.js" defer></script><script src="/assets/js/9.d5478af5.js" defer></script>
+    <script src="/assets/js/app.8dda3b46.js" defer></script><script src="/assets/js/2.dbded86b.js" defer></script><script src="/assets/js/10.4681be28.js" defer></script>
   </body>
 </html>
